# ai-learning-v1

./: .env  .gitignore  README.md  doc-creation-guidelines.md
goal/: 04-learning-status.md  README.md  claude-session.md
learn-python/: 01_basics.py  02_collections.py  03_control_flow.py  04_functions.py  defaults.md  pdb-debugging.md  practice.py
python-practice/2026-04-27/: exam-1-with-answers.md
study-session-1/: README.md  exam-2-questions.md  exam-3-questions.md  exam-4-questions.md  fast-track-for-developers.md  js-to-python-cheatsheet.md  python-small-concepts.md  what-i-learned.md
week-three/: day-one-tool-calling-inventory.md  langchain-tool-calling-explained.md  langchain-tool-calling-practice.md  langchain_tool_calling.py  langchain_tool_calling_v1.py  week-plan.md  week-two-recap.md  week-two-summary.md
week-three/ajaycode/: info.md  inventory_01_sqlite_basics.py  inventory_02_embeddings_basics.py  inventory_03_chromadb_retrieval.py  inventory_04_llm_chain.py  inventory_05_rag_chain.py  inventory_06_tool_calling.py  inventory_07_multi_chain.py  inventory_08_full_agent.py  pyproject.toml  tool_calling_demo_from_scratch.py  tool_calling_inventory_demo.py
week-two/: day-two-rag-architecture.md  day-two-rag-summary.md
